New version of form searcher / filters
* Filters:
    - Filters are now services
    - Remove AbstractFieldFilter and FieldFilterDoctrineInterface classes
    - Filters should now extends AbstractFilter or implements FilterInterface
    - The old filters are deleted. Use new filter classes (filter options have been changed)
* Form Searcher:
    - Remove AbstractFormSearcher class. Use AbstractSearcher instead
* Add SearchFormBuilder class
* Crud class:
    - Update __construct signature
    - Remove router, formFactory, request, registry properties (services). Use container (locator) instead
    - Remove user and formSearcher properties
    - Remove initializeFieldsFilter method
    - Remove getSearcherForm method (use getSearchForm instead)
    - Add searchForm property (SearchFormBuilder|FormView)
    - Add getSearchForm method
    - Add getVirtualColumns and getVirtualColumn methods
    - createSearcherForm method use now SearchFormBuilder class
* CrudFactory class:
    - Update __construct signature
    - Remove all properties (services). Use container (locator) instead
* CrudSession class:
    - formSearcherData property is renamed to searchFormData.
    - Add searchFormIsSubmitted property

--- a/tests/Functional/App/config/routes.yaml
+++ b/tests/Functional/App/config/routes.yaml
@@ -13,3 +13,9 @@ user_without_trait_crud:
 user_without_trait_ajax_crud:
     path: /user-without-trait/ajax-crud
     controller: Ecommit\CrudBundle\Tests\Functional\App\Controller\UserWithoutTraitController::ajaxCrudAction
+
+fake_route:
+    path: /fake
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::urlRedirectAction
+    defaults:
+        path: /
