--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,21 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0",
+        "php": "^7.4|^8.0",
         "ext-mbstring": "*",
         "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
-        "doctrine/orm": "^2.6.3",
+        "doctrine/orm": "^2.6.4",
         "doctrine/persistence": "^1.3|^2.0",
         "ecommit/javascript-bundle": "2.6.*@dev",
-        "ecommit/util-bundle": "3.0.*@dev",
         "ecommit/scalar-values": "^1.0",
+        "ecommit/util-bundle": "3.0.*@dev",
         "symfony/asset": "^4.4|^5.0",
         "symfony/config": "^4.4.12|^5.1.4",
         "symfony/dependency-injection": "^4.4.12|^5.1.4",
         "symfony/doctrine-bridge": "^4.4|^5.0",
         "symfony/form": "^4.4|^5.0",
         "symfony/framework-bundle": "^4.4|^5.0",
+        "symfony/http-client": "^4.4.11|^5.1.3",
         "symfony/http-foundation": "^4.4|^5.0",
         "symfony/http-kernel": "^4.4|^5.0",
         "symfony/options-resolver": "^4.4|^5.0",
@@ -38,11 +39,11 @@
     },
     "require-dev": {
         "dbrekelmans/bdi": "^0.3.0",
+        "doctrine/annotations": "^1.7",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^2.18.0",
         "phpunit/phpunit": "^8.4.1",
         "symfony/dom-crawler": "^4.4|^5.0",
-        "symfony/http-client": "^4.4.11|^5.1.3",
         "symfony/panther": "^1.0",
         "symfony/webpack-encore-bundle": "^1.7.3",
         "symfony/yaml": "^4.4|^5.0"
