--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/http-client": "^4.4.11|^5.1.3",
         "symfony/http-foundation": "^4.4|^5.0",
         "symfony/http-kernel": "^4.4|^5.0",
+        "symfony/intl": "^4.4|^5.0",
         "symfony/options-resolver": "^4.4|^5.0",
         "symfony/property-access": "^4.4|^5.0",
         "symfony/routing": "^4.4|^5.0",
