--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
         "doctrine/orm": "^2.6.4",
         "doctrine/persistence": "^1.3|^2.0",
+        "ecommit/doctrine-utils": "1.0.x-dev",
+        "ecommit/paginator": "1.0.x-dev",
         "ecommit/scalar-values": "^1.0",
         "symfony/asset": "^4.4|^5.0",
         "symfony/config": "^4.4.12|^5.1.4",
