--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,11 @@
 ; top-most EditorConfig file
 root = true
 
-; Unix-style newlines
 [*]
 end_of_line = LF
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+
+[*.js]
+indent_size = 2
