Add Symfony 6 support

--- a/tests/Functional/App/config/framework.yaml
+++ b/tests/Functional/App/config/framework.yaml
@@ -2,4 +2,5 @@ framework:
     secret: test
     test: true
     session:
-        storage_id: session.storage.mock_file
+        handler_id: null
+        storage_factory_id: session.storage.factory.mock_file
