--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,20 +14,22 @@ jobs:
             matrix:
                 include:
                     #Mini
-                    -   php-version: '7.4'
+                    -   php-version: '8.0'
                         composer-flags: '--prefer-stable --prefer-lowest'
                         description: 'with lowest'
 
                     #Symfony versions
                     -   php-version: '8.1'
-                        symfony-version: '^4.4'
-                        description: 'with SF ^4.4'
-                    -   php-version: '8.1'
                         symfony-version: '^5.4'
                         description: 'with SF ^5.4'
+                    -   php-version: '8.1'
+                        symfony-version: '~6.0'
+                        description: 'with SF ~6.0'
+                    -   php-version: '8.1'
+                        symfony-version: '^6.0'
+                        description: 'with SF ^6.0'
 
                     #PHP versions
-                    -   php-version: '7.4'
                     -   php-version: '8.0'
                     -   php-version: '8.1'
 
