--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "ext-mbstring": "*",
         "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
         "doctrine/orm": "^2.6.4",
@@ -18,25 +18,25 @@
         "ecommit/doctrine-utils": "1.0.x-dev",
         "ecommit/paginator": "1.0.x-dev",
         "ecommit/scalar-values": "^1.0",
-        "symfony/asset": "^4.4|^5.0",
-        "symfony/config": "^4.4.12|^5.1.4",
-        "symfony/dependency-injection": "^4.4.12|^5.1.4",
-        "symfony/doctrine-bridge": "^4.4|^5.0",
-        "symfony/form": "^4.4|^5.0",
-        "symfony/framework-bundle": "^4.4|^5.0",
-        "symfony/http-client": "^4.4.11|^5.1.3",
-        "symfony/http-foundation": "^4.4|^5.0",
-        "symfony/http-kernel": "^4.4|^5.0",
-        "symfony/intl": "^4.4|^5.0",
-        "symfony/options-resolver": "^4.4|^5.0",
-        "symfony/property-access": "^4.4|^5.0",
-        "symfony/routing": "^4.4|^5.0",
-        "symfony/security-bundle": "^4.4|^5.0",
-        "symfony/security-csrf" : "^4.4|^5.0",
-        "symfony/translation": "^4.4|^5.0",
-        "symfony/twig-bridge": "^4.4|^5.0",
-        "symfony/twig-bundle": "^4.4|^5.0",
-        "symfony/validator": "^4.4|^5.0",
+        "symfony/asset": "^5.4|^6.0",
+        "symfony/config": "^5.4|^6.0",
+        "symfony/dependency-injection": "^5.4|^6.0",
+        "symfony/doctrine-bridge": "^5.4|^6.0",
+        "symfony/form": "^5.4|^6.0",
+        "symfony/framework-bundle": "^5.4|^6.0",
+        "symfony/http-client": "^5.4|^6.0",
+        "symfony/http-foundation": "^5.4|^6.0",
+        "symfony/http-kernel": "^5.4|^6.0",
+        "symfony/intl": "^5.4|^6.0",
+        "symfony/options-resolver": "^5.4|^6.0",
+        "symfony/property-access": "^5.4|^6.0",
+        "symfony/routing": "^5.4|^6.0",
+        "symfony/security-bundle": "^5.4|^6.0",
+        "symfony/security-csrf" : "^5.4|^6.0",
+        "symfony/translation": "^5.4|^6.0",
+        "symfony/twig-bridge": "^5.4|^6.0",
+        "symfony/twig-bundle": "^5.4|^6.0",
+        "symfony/validator": "^5.4|^6.0",
         "twig/twig": "^2.12.0|^3.0"
     },
     "require-dev": {
@@ -45,13 +45,10 @@
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^8.4.1",
-        "symfony/dom-crawler": "^4.4|^5.0",
-        "symfony/panther": "^1.0",
+        "symfony/dom-crawler": "^5.4|^6.0",
+        "symfony/panther": "^2.0.1",
         "symfony/webpack-encore-bundle": "^1.7.3",
-        "symfony/yaml": "^4.4|^5.0"
-    },
-    "conflict": {
-        "symfony/doctrine-bridge": "4.4.19|5.2.2|5.2.3"
+        "symfony/yaml": "^5.4|^6.0"
     },
     "autoload": {
         "psr-4": { "Ecommit\\CrudBundle\\": "src/" }
