--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": "^8.0",
         "ext-mbstring": "*",
-        "doctrine/doctrine-bundle": "^1.12.3|^2.0.3",
-        "doctrine/orm": "^2.6.4",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/orm": "^2.9",
         "doctrine/persistence": "^1.3|^2.0",
         "ecommit/doctrine-utils": "1.0.x-dev",
         "ecommit/paginator": "1.0.x-dev",
@@ -41,7 +41,6 @@
     },
     "require-dev": {
         "dbrekelmans/bdi": "^0.3.0",
-        "doctrine/annotations": "^1.7",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^8.4.1",
