--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     },
     "require-dev": {
         "dbrekelmans/bdi": "^0.3.0",
+        "dg/bypass-finals": "^1.3",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^9.0",
