--- a/tests/Functional/App/config/security.yaml
+++ b/tests/Functional/App/config/security.yaml
@@ -1,6 +1,24 @@
 security:
     enable_authenticator_manager: true
+    password_hashers:
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'plaintext'
+
+    providers:
+        app_user_provider:
+            entity:
+                class: Ecommit\CrudBundle\Tests\Functional\App\Entity\TestUser
+                property: username
 
     firewalls:
         main:
             pattern: ^/
+            provider: app_user_provider
+            form_login:
+                login_path: login
+                check_path: login
+            logout:
+                path: logout
+
+    access_control:
+        - { path: ^/user-with-persistent-settings/private, roles: ROLE_USER }
+        - { path: ^/, roles: PUBLIC_ACCESS }
