--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-mbstring": "*",
         "doctrine/doctrine-bundle": "^2.4.5",
         "doctrine/orm": "^2.9",
-        "doctrine/persistence": "^1.3|^2.0",
+        "doctrine/persistence": "^1.3|^2.0|^3.0",
         "ecommit/doctrine-utils": "1.0.x-dev",
         "ecommit/paginator": "1.0.x-dev",
         "ecommit/scalar-values": "^1.0",
