--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,17 @@
     ],
     "require": {
         "php": "^8.0",
+        "ext-json": "*",
         "ext-mbstring": "*",
+        "doctrine/collections": "^1.5",
+        "doctrine/dbal": "^2.13.1|^3.2",
         "doctrine/doctrine-bundle": "^2.4.5",
         "doctrine/orm": "^2.9",
         "doctrine/persistence": "^1.3|^2.0|^3.0",
         "ecommit/doctrine-utils": "1.0.x-dev",
         "ecommit/paginator": "1.0.x-dev",
         "ecommit/scalar-values": "^1.0",
+        "psr/container": "^1.1|^2.0",
         "symfony/asset": "^5.4|^6.0",
         "symfony/config": "^5.4|^6.0",
         "symfony/dependency-injection": "^5.4|^6.0",
@@ -25,6 +29,7 @@
         "symfony/form": "^5.4|^6.0",
         "symfony/framework-bundle": "^5.4|^6.0",
         "symfony/http-client": "^5.4|^6.0",
+        "symfony/http-client-contracts": "^2.4|^3.0",
         "symfony/http-foundation": "^5.4|^6.0",
         "symfony/http-kernel": "^5.4|^6.0",
         "symfony/intl": "^5.4|^6.0",
@@ -32,7 +37,9 @@
         "symfony/property-access": "^5.4|^6.0",
         "symfony/routing": "^5.4|^6.0",
         "symfony/security-bundle": "^5.4|^6.0",
+        "symfony/security-core": "^5.4|^6.0",
         "symfony/security-csrf": "^5.4|^6.0",
+        "symfony/service-contracts": "^1.1.6|^2|^3",
         "symfony/translation": "^5.4|^6.0",
         "symfony/twig-bridge": "^5.4|^6.0",
         "symfony/twig-bundle": "^5.4|^6.0",
