--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,6 +40,11 @@ jobs:
                         description: 'with Coding Standards'
                         coding-standards: true
 
+                    #Static Analysis
+                    -   php-version: '8.1'
+                        description: 'with Static Analysis'
+                        static-analysis: true
+
         name: PHP ${{ matrix.php-version }} ${{ matrix.description }}
 
         runs-on: 'ubuntu-latest'
@@ -99,11 +104,11 @@ jobs:
                     yarn encore dev
 
             -   name: Run PHPUnit
-                if: matrix.coding-standards != true
+                if: matrix.coding-standards != true && matrix.static-analysis != true
                 run: php vendor/phpunit/phpunit/phpunit
 
             -   name: Run Karma
-                if: matrix.coding-standards != true
+                if: matrix.coding-standards != true && matrix.static-analysis != true
                 run: xvfb-run ./node_modules/.bin/karma start --single-run
 
             -   name: Run PHP CS Fixer
@@ -123,3 +128,7 @@ jobs:
             -   name: Run ESLint
                 if: matrix.coding-standards
                 run: ./node_modules/.bin/eslint assets/js/* tests/assets/js/*
+
+            -   name: Run Psalm
+                if: matrix.static-analysis
+                run: php vendor/bin/psalm --stats --output-format=github --php-version=8.1
