--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "symfony/dom-crawler": "^5.4|^6.0",
         "symfony/panther": "^2.0.1",
         "symfony/webpack-encore-bundle": "^1.7.3",
-        "symfony/yaml": "^5.4|^6.0"
+        "symfony/yaml": "^5.4|^6.0",
+        "vimeo/psalm": "^4.22"
     },
     "autoload": {
         "psr-4": { "Ecommit\\CrudBundle\\": "src/" }
