--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "doctrine/doctrine-bundle": "^2.4.5",
         "doctrine/orm": "^2.9",
         "doctrine/persistence": "^1.3|^2.0|^3.0",
-        "ecommit/doctrine-utils": "1.0.x-dev",
-        "ecommit/paginator": "1.0.x-dev",
+        "ecommit/doctrine-utils": "^1.0",
+        "ecommit/paginator": "^1.0",
         "ecommit/scalar-values": "^1.0",
         "psr/container": "^1.1|^2.0",
         "symfony/asset": "^5.4|^6.0",
