--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "doctrine/collections": "^1.5",
+        "doctrine/collections": "^1.5|^2.0",
         "doctrine/dbal": "^2.13.1|^3.2",
         "doctrine/doctrine-bundle": "^2.4.5",
         "doctrine/orm": "^2.9",
