--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/security-csrf": "^5.4|^6.0",
         "symfony/service-contracts": "^1.1.6|^2|^3",
         "symfony/translation": "^5.4|^6.0",
+        "symfony/translation-contracts": "^2.3|^3.0",
         "symfony/twig-bridge": "^5.4|^6.0",
         "symfony/twig-bundle": "^5.4|^6.0",
         "symfony/validator": "^5.4|^6.0",
