--- a/composer.json
+++ b/composer.json
@@ -22,29 +22,29 @@
         "ecommit/paginator": "^1.0",
         "ecommit/scalar-values": "^1.0",
         "psr/container": "^1.1|^2.0",
-        "symfony/asset": "^5.4|^6.0",
-        "symfony/config": "^5.4|^6.0",
-        "symfony/dependency-injection": "^5.4|^6.0",
-        "symfony/doctrine-bridge": "^5.4.3|^6.0.3",
-        "symfony/form": "^5.4|^6.0",
-        "symfony/framework-bundle": "^5.4|^6.0",
-        "symfony/http-client": "^5.4|^6.0",
+        "symfony/asset": "^5.4|^6.0|^7.0",
+        "symfony/config": "^5.4|^6.0|^7.0",
+        "symfony/dependency-injection": "^5.4|^6.0|^7.0",
+        "symfony/doctrine-bridge": "^5.4.3|^6.0.3|^7.0",
+        "symfony/form": "^5.4|^6.0|^7.0",
+        "symfony/framework-bundle": "^5.4|^6.0|^7.0",
+        "symfony/http-client": "^5.4|^6.0|^7.0",
         "symfony/http-client-contracts": "^2.4|^3.0",
-        "symfony/http-foundation": "^5.4|^6.0",
-        "symfony/http-kernel": "^5.4|^6.0",
-        "symfony/intl": "^5.4|^6.0",
-        "symfony/options-resolver": "^5.4|^6.0",
-        "symfony/property-access": "^5.4|^6.0",
-        "symfony/routing": "^5.4|^6.0",
-        "symfony/security-bundle": "^5.4|^6.0",
-        "symfony/security-core": "^5.4|^6.0",
-        "symfony/security-csrf": "^5.4|^6.0",
+        "symfony/http-foundation": "^5.4|^6.0|^7.0",
+        "symfony/http-kernel": "^5.4|^6.0|^7.0",
+        "symfony/intl": "^5.4|^6.0|^7.0",
+        "symfony/options-resolver": "^5.4|^6.0|^7.0",
+        "symfony/property-access": "^5.4|^6.0|^7.0",
+        "symfony/routing": "^5.4|^6.0|^7.0",
+        "symfony/security-bundle": "^5.4|^6.0|^7.0",
+        "symfony/security-core": "^5.4|^6.0|^7.0",
+        "symfony/security-csrf": "^5.4|^6.0|^7.0",
         "symfony/service-contracts": "^1.1.6|^2|^3",
-        "symfony/translation": "^5.4|^6.0",
+        "symfony/translation": "^5.4|^6.0|^7.0",
         "symfony/translation-contracts": "^2.3|^3.0",
-        "symfony/twig-bridge": "^5.4|^6.0",
-        "symfony/twig-bundle": "^5.4|^6.0",
-        "symfony/validator": "^5.4|^6.0",
+        "symfony/twig-bridge": "^5.4|^6.0|^7.0",
+        "symfony/twig-bundle": "^5.4|^6.0|^7.0",
+        "symfony/validator": "^5.4|^6.0|^7.0",
         "twig/twig": "^2.12.0|^3.0"
     },
     "require-dev": {
@@ -53,10 +53,10 @@
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^9.0",
-        "symfony/dom-crawler": "^5.4|^6.0",
+        "symfony/dom-crawler": "^5.4|^6.0|^7.0",
         "symfony/panther": "^2.0.1",
-        "symfony/webpack-encore-bundle": "^1.7.3",
-        "symfony/yaml": "^5.4|^6.0",
+        "symfony/webpack-encore-bundle": "^1.7.3|^2.1.1",
+        "symfony/yaml": "^5.4|^6.0|^7.0",
         "vimeo/psalm": "^4.22"
     },
     "autoload": {
